# clizard

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  codecov.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: docs.yml  pytest.yml
.sphinxbot/: parameters_manifest.json  rst_pages.json
.sphinxbot/describe/: __init__.json  __main__.json  cli_args.json
clizard/: __init__.py  __main__.py  cli_args.py  clizard.py  clizard_file.py  core.py  discover.py  examples.py  git_info.py  project_info.py  scaffold.py  utils.py
clizard/examples/: examples_auto_cli_release_tool.py  examples_llmlight_app.py  examples_summarizer.py  examples_wrap_summarizer.py
clizard/tests/: test_clizard.py
deprecated/: __init__.py  __main__.py  cli_args.py  config.py  core.py
docs/pages/doctrees/: Abstract.doctree  Coding quality.doctree  Documentation.doctree  Examples.doctree  FAQ.doctree  Installation.doctree  Save and Load.doctree  Summary.doctree  clizard.clizard.doctree  configuration.doctree  environment.pickle  index.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Abstract.html  Coding quality.html  Documentation.html  Examples.html  FAQ.html  Installation.html  Save and Load.html  Summary.html  clizard.clizard.html  configuration.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sponsor.html
docs/source/: Abstract.rst  Coding quality.rst  Documentation.rst  Examples.rst  FAQ.rst  Installation.rst  Save and Load.rst  Summary.rst  clizard.clizard.rst  conf.py  index.rst
(+40 files in other folders)
